Add static images. Add main.css and home page CSS rules

--- a/WebSite/appsettings.json
+++ b/WebSite/appsettings.json
@@ -13,7 +13,7 @@
   "Umbraco": {
     "CMS": {
       "Global": {
-        "Id": "7e88f18e-fd0d-4b31-be5f-08a0e616fb11",
+        "Id": "43313ead-4348-4aee-a8ab-e4cc3f6a97b5",
         "SanitizeTinyMce": true
       },
       "Content": {
@@ -23,5 +23,9 @@
         }
       }
     }
+  },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Server=DESKTOP-56H1EGG\\SQLEXPRESS;Database=AlanAttorneyWebsite;User Id=attorney-admin;Password=3'dxYJ)!",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.SqlClient"
   }
 }
